--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
 			<artifactId>flyway-mysql</artifactId>
 			<version>9.20.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
